# Project-Eternum-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  cmake_install.cmake  eternum-tests[1]_include.cmake  makefile
.cmake/api/v1/reply/: cache-v2-0879ea800c03454ded75.json  cmakeFiles-v1-75bea9669cdfafe4225d.json  codemodel-v2-1fb01d9d83c866eb196b.json  directory-Eternum Engine.third_party.googletest-6ef5b7f1ca243bf135ba.json  directory-Eternum Engine.third_party.googletest.googlemock-37056e31fb302ca0192d.json  directory-Eternum Engine.third_party.googletest.googletest-957619299375984ebbc1.json  index-2025-08-03T06-38-36-0384.json  target-eternum-engine-d79afde7c444b2779f2c.json  target-eternum-engine-lib-f67048a93b72d55fe0b1.json  target-eternum-tests-78eb714440c96b5a1174.json  target-gmock-9843236abc25cc0437a8.json  target-gmock_main-11193ff3e21e4d2f4b16.json  target-gtest-5e38c23433f84a9bf934.json  target-gtest_main-4cd6c3c8aeabece28f69.json
.github/workflows/: build.yml  ci-Linux.yml  ci-windows.yml  ci.yml
Eternum Engine/src/: main.cpp
Eternum Engine/src/Core/ECS/Component/: Component.h
Eternum Engine/src/Core/ECS/Component/Physics/: PhysicsComponent.cpp  PhysicsComponent.h
Eternum Engine/src/Core/ECS/Component/Transform/: Transform.cpp  Transform.h
Eternum Engine/src/Core/ECS/Entity/: Entity.cpp  Entity.h
Eternum Engine/src/Core/Runtime/: Runtime.cpp  Runtime.h
Eternum Engine/src/Core/Vector/: Vector.h
Eternum Engine/src/Core/pch/: pch.cpp  pch.h
Eternum Engine/src/Systems/: AllSystems.h  system.h
Eternum Engine/src/Systems/ComponentSystem/: ComponentSystem.cpp  ComponentSystem.h
Eternum Engine/src/Systems/Dungeon System/: DungeonSystem.cpp  DungeonSystem.h
Eternum Engine/src/Systems/Grid System/: GridSystem.cpp  GridSystem.h
Eternum Engine/src/Systems/Input/: InputSystem.cpp  InputSystem.h
Eternum Engine/src/Systems/Input/Key/: Key.h
Eternum Engine/src/Systems/System Registry/: SystemRegistry.h
Unit Tests/: ComponentTests.cpp  EntityTests.cpp  GridSystemTests.cpp  SystemRegistryTests.cpp  SystemTests.cpp  VectorTests.cpp
developer/: configure_project.bat  configure_project.sh
